<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Diary"
    android:orientation="vertical"
    android:background="#F4FBF8">

    <!-- Top Nav Bar (Header, Back button and trash button) -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="Diary"
        app:navigationIcon="@drawable/arrow_small_left"
        app:titleTextAppearance="@style/MyToolbarTitleTextAppearance"
        android:textColor="#002114">

        <!-- Trash Icon -->
        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="16dp"
            android:src="@drawable/ic_trash"
            android:contentDescription="@string/delete_entry"
            app:tint="#1D1B20" />
    </com.google.android.material.appbar.MaterialToolbar>

    <!-- DiaryTitleInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/diaryTitle"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDiaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/diary_title_instruction"
            android:textSize="16sp"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- DiaryContentInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/diaryContent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDiaryContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto"
            android:gravity="top"
            android:hint="@string/diary_content_instruction"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            android:scrollbars="vertical"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Save Diary Entry Button -->
    <Button
        android:id="@+id/saveDiaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#206A4E"
        android:elevation="0dp"
        android:fontFamily="@font/roboto_medium"
        android:stateListAnimator="@null"
        android:text="@string/save"
        android:textAllCaps="false"
        style="@style/Widget.Material3.Button"
        android:textSize="16sp" />

</LinearLayout>