<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6FAFE"
    android:orientation="vertical"
    tools:context=".Login">

    <!-- Login Header -->
    <TextView
        android:id="@+id/login_header"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/welcome_back"
        android:textColor="#002114"
        android:textSize="36sp" />

    <!-- Login Body -->
    <TextView
        android:id="@+id/login_body"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/let_s_sign_in_to_your_account"
        android:textSize="16sp" />

    <!-- Username TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:hint="@string/username"
            android:textSize="16sp"
            android:inputType="textVisiblePassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password TextInputLayout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Optional Forgot Password Option -->
<!--    <Button-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:layout_gravity="end"-->
<!--        android:paddingEnd="24dp"-->
<!--        android:background="#00000000"-->
<!--        android:fontFamily="@font/roboto_medium"-->
<!--        android:padding="0dp"-->
<!--        android:paddingTop="4dp"-->
<!--        android:text="@string/forgot_password"-->
<!--        android:textAlignment="textEnd"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="#002114"-->
<!--        style="@style/Widget.Material3.Button"-->
<!--        android:textSize="14sp"-->
<!--        app:strokeColor="#FFFFFF" />-->

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#206487"
        android:elevation="0dp"
        android:fontFamily="@font/roboto_medium"
        android:stateListAnimator="@null"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <!-- Sign Up Option -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/signUpBut"
            style="@style/Widget.Material3.Button"
            android:layout_width="63dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="4dp"
            android:paddingEnd="0dp"
            android:text="@string/sign_up"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="#206487"
            android:textSize="14sp"
            app:strokeColor="#FFFFFF" />

    </LinearLayout>

</LinearLayout>