...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <!-- Get Started Button !-->
    <Button
        android:id="@+id/getStartedButton"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="#FFFFFF"
        android:elevation="0dp"
...
