<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="Home"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_saved"
        android:icon="@drawable/ic_heart"
        android:title="Saved"
        android:enabled="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account"
        android:title="Account"
        android:enabled="true"
        app:showAsAction="ifRoom"/>


</menu>